Bug 480658 - cursor escaping to another screen when only 1 was selected
Summary: cursor escaping to another screen when only 1 was selected
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 5.93.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-02-01 06:50 UTC by Boris Gonzalez
Modified: 2025-02-22 04:10 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.2
Sentry Crash Report:


Attachments
video of the issue (141.46 KB, video/mp4)
2024-02-01 06:50 UTC, Boris Gonzalez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Boris Gonzalez 2024-02-01 06:50:30 UTC
Created attachment 165426 [details]
video of the issue

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  set screens in vertical alignment  in wayland
2.  set drawing tablet to only move in top screen
3.  set area as "fit output in tablet"
3.  move pen around the bottom of the tablet

OBSERVED RESULT
cursor shows on an area of the bottom screen

EXPECTED RESULT
cursor gets clipped to the bottom of the top screen as in x11

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  plasma6 RC2
(available in About System)
KDE Plasma Version:  5.93.0
KDE Frameworks Version: 5.249.0
Qt Version: 6.7.0

ADDITIONAL INFORMATION
wayland
drawing tablet doesnt match the ratio of the screen set as active
Comment 1 Violet 2024-10-28 20:26:36 UTC
Also happening for me, but with my monitors arranged horizontally, and I have "Map to Screen" set to "Follow the current screen". Moving the pen to the far right of the tablet causes it to escape to the right monitor, and now that it's there, it moves the whole tablet display over, so I can't even go back to the main monitor without picking up the mouse.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0
Kernel Version: 6.11.5-lqx1-1-lqx (64-bit)
Graphics Platform: Wayland
Processors: 12 × Intel® Core™ i7-8700K CPU @ 3.70GHz
Memory: 31.3 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Comment 2 Joshua Goins 2024-11-06 18:32:51 UTC
I have noticed the same thing, very strange
Comment 3 Bug Janitor Service 2025-02-18 19:23:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7193
Comment 4 Vlad Zahorodnii 2025-02-19 18:22:16 UTC
Git commit a151795b8b6def268c38bd8711b9ec45194b975f by Vlad Zahorodnii, on behalf of Yifan Zhu.
Committed on 19/02/2025 at 18:22.
Pushed by vladz into branch 'master'.

backends/libinput: confine TabletToolEvent to output

An output with width 1920 contains pixels from 0 to 1919 inclusive, and
pixel 1920 belongs to another screen. Hence, decrease width and height
by 1 to correctly confine TabletToolEvent to the respective output.

Test plan:
- set up two displays horizontally aligned
- set tablet to follow the current screen
- focus on left screen
- move tablet stylus to right most edge, verify that it does not
  teleport to the right edge of right screen
- test that the cursor teleports without this patch

M  +2    -2    src/backends/libinput/events.cpp

https://invent.kde.org/plasma/kwin/-/commit/a151795b8b6def268c38bd8711b9ec45194b975f
Comment 5 Vlad Zahorodnii 2025-02-19 18:34:09 UTC
Git commit b9a666c6d0bb3b58ed210a66db08a01c00ad7044 by Vlad Zahorodnii.
Committed on 19/02/2025 at 18:34.
Pushed by vladz into branch 'Plasma/6.3'.

backends/libinput: confine TabletToolEvent to output

An output with width 1920 contains pixels from 0 to 1919 inclusive, and
pixel 1920 belongs to another screen. Hence, decrease width and height
by 1 to correctly confine TabletToolEvent to the respective output.

Test plan:
- set up two displays horizontally aligned
- set tablet to follow the current screen
- focus on left screen
- move tablet stylus to right most edge, verify that it does not
  teleport to the right edge of right screen
- test that the cursor teleports without this patch


(cherry picked from commit a151795b8b6def268c38bd8711b9ec45194b975f)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +2    -2    src/backends/libinput/events.cpp

https://invent.kde.org/plasma/kwin/-/commit/b9a666c6d0bb3b58ed210a66db08a01c00ad7044