backends/libinput: confine TabletToolEvent to output

An output with width 1920 contains pixels from 0 to 1919 inclusive, and
pixel 1920 belongs to another screen. Hence, decrease width and height
by 1 to correctly confine TabletToolEvent to the respective output.

Test plan:
- set up two displays horizontally aligned
- set tablet to follow the current screen
- focus on left screen
- move tablet stylus to right most edge, verify that it does not
  teleport to the right edge of right screen
- test that the cursor teleports without this patch

BUG: 480658